--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8" name="auther" content="wulizhou">
-	<title></title>
+	<title>吴立州的个人站点</title>
+	<style type="text/css">
+		a{font-size: 35px}
+	</style>
 </head>
 <body>
 <h1>这是我使用github pages搭建的个人站点</h1>
