--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>这是我使用github pages搭建的个人站点</h1>
-<a href="wezx://">跳转到app</a>
+<a href="wezx://">跳转到app</a><br>
 <a href="https://rxjava.yuxingxin.com/">RxJava Essentials 中文翻译版</a>
 </body>
 </html>
