--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" name="auther" content="wulizhou">
+<meta name = "format-detection" content = "telephone=no">
 	<title>吴立州的个人站点</title>
 	<style type="text/css">
 		a{font-size: 35px}
