--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 	</style>
 </head>
 <body>
-<p class="Normal" style="line-height:150%;"><span style="font-size:12pt;">合同编号：<span id="htBh">68900726075</span></span></p> 
-<h1>这是我使用github pages搭建的个人站点</h1>
+<a href="wulz.html">跳转到吴</a><br>
 <a href="yangyz">跳转到杨</a><br>
-<a href="https://rxjava.yuxingxin.com/">RxJava Essentials 中文翻译版</a>
+<a href="Android/AndroidIndex.html">Android资源</a><br>
+<a href="IOS/IOSIndex.html">IOS资源</a><br>
+<a href="https://rxjava.yuxingxin.com/">RxJava Essentials 中文翻译版</a><br>
 </body>
 </html>
