--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" name="auther" content="wulizhou">
 <meta name = "format-detection" content = "telephone=no">
-	<title>吴立州的个人站点</title>
+	<title>个人站点</title>
 	<style type="text/css">
 		a{font-size: 35px}
 	</style>
