--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</style>
 </head>
 <body>
-<a href="wulz.html">跳转到吴</a><br>
-<a href="yangyz">跳转到杨</a><br>
+<a href="wulz/wulz.html">跳转到吴</a><br>
+<a href="yangyz/yangyz.html">跳转到杨</a><br>
 <a href="Android/AndroidIndex.html">Android资源</a><br>
 <a href="IOS/IOSIndex.html">IOS资源</a><br>
 <a href="https://rxjava.yuxingxin.com/">RxJava Essentials 中文翻译版</a><br>
