--- a/wulz/wulz.html
+++ b/wulz/wulz.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>吴的demo</title>
+	<title>吴立州</title>
 </head>
 <body>
-this is wulizhou
+<a href="bookmarks_17_5_9.html">书签</a>
 </body>
 </html>
