--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <a href="Android/AndroidIndex.html">Android资源</a><br>
 <a href="IOS/IOSIndex.html">IOS资源</a><br>
 <a href="https://rxjava.yuxingxin.com/">RxJava Essentials 中文翻译版</a><br>
+<a href="/worktest/wezhuxue-weixin/src/main/webapp/views/zxt_stu/stu_downLoad.html">h5测试</a>
 </body>
 </html>
