--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <a href="Android/AndroidIndex.html">Android资源</a><br>
 <a href="IOS/IOSIndex.html">IOS资源</a><br>
 <a href="https://rxjava.yuxingxin.com/">RxJava Essentials 中文翻译版</a><br>
-<a href="https://rxjava.yuxingxin.com/">《Kotlin for android developers》中文版翻译</a><br>
+<a href="https://wangjiegulu.gitbooks.io/kotlin-for-android-developers-zh/content/">《Kotlin for android developers》中文版翻译</a><br>
 </body>
 </html>
