--- a/wulz/wulz.html
+++ b/wulz/wulz.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <a href="bookmarks_17_5_9.html">书签</a>
+<a href="https://www.jianshu.com/p/b444cda10aa0">《利用Python进行数据分析·第2版》</a>
 </body>
 </html>
